Improve documentation, resolve spelling and grammar errors

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -18,10 +18,10 @@
 # The name of the cluster, must be alpha-numeric
 whirr.cluster-name=whirr
 
-# The user to run use when setting up the cluster
+# The user to provision and run under on each cluster node
 whirr.cluster-user=whirr
 
-# Define the cluster topology, initially defining 1 CM server node, 1 CDH master node and 3 CDH slave nodes
+# The cluster topology, defining 1 CM server node, 1 CDH master node and 3 CDH slave nodes
 whirr.instance-templates=1 cm-server+cm-agent,1 cm-agent+cm-cdh-namenode+cm-cdh-secondarynamenode+cm-cdh-oozie-server+cm-cdh-hbase-master+cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-impala-statestore+cm-cdh-hue-server+cm-cdh-hue-beeswaxserver,3 cm-agent+cm-cdh-datanode+cm-cdh-tasktracker+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon+cm-cdh-zookeeper
 
 # List of client IP ranges that can access the CM and CDH web console and client servers
@@ -31,7 +31,8 @@ whirr.client-cidrs=0.0.0.0/0
 whirr.private-key-file=${sys:user.home}/.ssh/whirr
 whirr.public-key-file=${sys:user.home}/.ssh/whirr.pub
 
-# Cloud provider details, example Amazon AWS EC2 details provided
+# Cloud provider details, example Amazon AWS EC2 details provided,
+# identity and credentials provided via environment variables 
 whirr.provider=aws-ec2
 whirr.identity=${env:WHIRR_CLOUD_PROVIDER_ID}
 whirr.credential=${env:WHIRR_CLOUD_PROVIDER_KEY}
@@ -43,20 +44,20 @@ whirr.location-id=us-east-1
 # its initialization and launch, defaults to true
 whirr.cm.auto=true
 
-# Overide host storage device mount points with single directory for CM Service directories
+# Override host storage device mount points with single directory for CM Service directories
 #whirr.cm.data.dirs.root=/data
 
-# Decide whether to issue cloud secuirty profile and iptables directives to open ports (true)
+# Decide whether to issue cloud security profile and iptables directives to open ports (true)
 # or rely on unfettered network access (false), defaults to false
 whirr.cm.firewall.enable=true
 
-# Global database type setting for all CM and CDH datastores, overidden on a case by case basis
+# Global database type setting for all CM and CDH datastores, overridden on a case by case basis
 # by CM Service settings (see below), defaults to 'mysql'
 whirr.cm.db.type=mysql
 
-# Provide CM settings with prefix 'whirr.cm.config.cm' followed by
-# setting name (see http://cloudera.github.com/cm_api/apidocs/v3/path__cm_config.html)
-# All settings are defaulted to reasonable values, but some overiding examples are show below:
+# Provide CM settings with prefix 'whirr.cm.config.cm.' followed by setting name
+# (see http://cloudera.github.com/cm_api/apidocs/v3/path__cm_config.html)
+# All settings are defaulted to reasonable values, but some overriding examples are show below:
 whirr.cm.config.cm.cm_database_name=cm
 whirr.cm.config.cm.cm_database_type=mysql
 whirr.cm.config.cm.custom_banner_html=My Whirr provisioned CM/CDH Cluster
@@ -66,7 +67,7 @@ whirr.cm.config.cm.remote_parcel_repo_urls=http://archive.cloudera.com/cdh4/parc
 # (see http://cloudera.github.io/cm_api/apidocs/v3/path__clusters_-clusterName-_services.html)
 # or role name (see http://cloudera.github.io/cm_api/apidocs/v3/path__clusters_-clusterName-_services_-serviceName-_roles.html)
 # then followed by '.' and setting name (see http://cloudera.github.io/cm_api/apidocs/v3/path__clusters_-clusterName-_services_-serviceName-_roles_-roleName-_config.html) 
-# All settings are defaulted to reasonable values, but some overiding examples are show below:
+# All settings are defaulted to reasonable values, but some overriding examples are show below:
 whirr.cm.config.datanode.dfs_datanode_data_dir_perm=755
 whirr.cm.config.mapreduce_gateway.mapred_submit_replication=3
 whirr.cm.config.mapreduce_gateway.mapred_reduce_tasks=3
@@ -77,7 +78,7 @@ whirr.cm.config.hive.hive_metastore_database_user=cdh_hive
 whirr.cm.config.hive.hive_metastore_database_password=cdh_hive
 whirr.cm.config.hive.hive_metastore_database_name=cdh_hive
 
-# Up the comms layer timeouts
+# Increase communication layer default timeouts to allow for long running provisioning tasks
 jclouds.compute.timeout.port-open=1200000
 jclouds.compute.timeout.node-running=3200000
 jclouds.compute.timeout.script-complete=18000000
