Update example config escape out commas

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -60,7 +60,7 @@ whirr.cm.db.type=mysql
 # All settings are defaulted to reasonable values, but some overriding examples are show below:
 whirr.cm.config.cm.cm_database_name=cm
 whirr.cm.config.cm.cm_database_type=mysql
-whirr.cm.config.cm.custom_banner_html=My Whirr provisioned CM/CDH Cluster
+whirr.cm.config.cm.custom_banner_html=My Cloudera Managed\, Whirr provisioned\, CDH Cluster
 whirr.cm.config.cm.remote_parcel_repo_urls=http://archive.cloudera.com/cdh4/parcels/latest/\\,http://beta.cloudera.com/impala/parcels/latest/
 
 # Provide CM Services settings with prefix 'whirr.cm.config.' followed by service name
