Update CM management service directories to mounted volumes (if available)

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -19,15 +19,26 @@
 
 whirr.cm.auto=true
 whirr.cm.use.packages=false
-whirr.cm.data.dirs.root.default=/data/1
+whirr.cm.data.dirs.root.default=/data
 whirr.cm.firewall.enable=false
 whirr.cm.db.type=mysql
 
 whirr.cm.default.config.namenode.dfs_name_dir_list=/dfs/nn
 whirr.cm.default.config.secondarynamenode.fs_checkpoint_dir_list=/dfs/snn
 whirr.cm.default.config.datanode.dfs_data_dir_list=/dfs/dn
+
 whirr.cm.default.config.jobtracker.jobtracker_mapred_local_dir_list=/mr/jt
 whirr.cm.default.config.tasktracker.tasktracker_mapred_local_dir_list=/mr/tt
+
+whirr.cm.default.config.hostmonitor.mgmt_log_dir=/cm/hmon/log
+whirr.cm.default.config.servicemonitor.mgmt_log_dir=/cm/smon/log
+whirr.cm.default.config.activitymonitor.mgmt_log_dir=/cm/amon/log
+whirr.cm.default.config.reportsmanager.mgmt_log_dir=/cm/rmgr/log
+whirr.cm.default.config.reportsmanager.headlamp_scratch_dir=/cm/rmgr/report
+whirr.cm.default.config.alertpublisher.mgmt_log_dir=/cm/apub/log
+whirr.cm.default.config.eventserver.mgmt_log_dir=/cm/esvr/log
+whirr.cm.default.config.eventserver.eventserver_index_dir=/cm/esvr/index
+whirr.cm.default.config.navigator.mgmt_log_dir=/cm/nav/log
 
 # CM Settings
 
