Update CM service directory definitions to include mounted volumes if avialable

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -23,22 +23,55 @@ whirr.cm.data.dirs.root.default=/data
 whirr.cm.firewall.enable=false
 whirr.cm.db.type=mysql
 
-whirr.cm.default.config.namenode.dfs_name_dir_list=/dfs/nn
-whirr.cm.default.config.secondarynamenode.fs_checkpoint_dir_list=/dfs/snn
-whirr.cm.default.config.datanode.dfs_data_dir_list=/dfs/dn
+whirr.cm.default.config.namenode.dfs_name_dir_list=/hdfs/namenode/data
+whirr.cm.default.config.namenode.namenode_log_dir=/hdfs/namenode/log
+whirr.cm.default.config.secondarynamenode.secondarynamenode_log_dir=/hdfs/secondarynamenode/log
+whirr.cm.default.config.secondarynamenode.fs_checkpoint_dir_list=/hdfs/secondarynamenode/data
+whirr.cm.default.config.journalnode.journalnode_log_dir=/hdfs/journalnode/log
+whirr.cm.default.config.httpfs.httpfs_log_dir=/hdfs/httpfs/log
+whirr.cm.default.config.balancer.balancer_log_dir=/hdfs/balancer/log
+whirr.cm.default.config.failovercontroller.failover_controller_log_dir=/hdfs/failovercontroller/log
+whirr.cm.default.config.datanode.dfs_data_dir_list=/hdfs/datanode/data
+whirr.cm.default.config.datanode.datanode_log_dir=/hdfs/datanode/log
 
-whirr.cm.default.config.jobtracker.jobtracker_mapred_local_dir_list=/mr/jt
-whirr.cm.default.config.tasktracker.tasktracker_mapred_local_dir_list=/mr/tt
+whirr.cm.default.config.jobtracker.jobtracker_mapred_local_dir_list=/mapreduce/jobtracker/local
+whirr.cm.default.config.jobtracker.hadoop_job_history_dir=/mapreduce/jobtracker/history
+whirr.cm.default.config.jobtracker.jobtracker_log_dir=/mapreduce/jobtracker/log
+whirr.cm.default.config.tasktracker.tasktracker_mapred_local_dir_list=/mapreduce/tasktracker/local
+whirr.cm.default.config.tasktracker.tasktracker_log_dir=/mapreduce/tasktracker/log
 
-whirr.cm.default.config.hostmonitor.mgmt_log_dir=/cm/hmon/log
-whirr.cm.default.config.servicemonitor.mgmt_log_dir=/cm/smon/log
-whirr.cm.default.config.activitymonitor.mgmt_log_dir=/cm/amon/log
-whirr.cm.default.config.reportsmanager.mgmt_log_dir=/cm/rmgr/log
-whirr.cm.default.config.reportsmanager.headlamp_scratch_dir=/cm/rmgr/report
-whirr.cm.default.config.alertpublisher.mgmt_log_dir=/cm/apub/log
-whirr.cm.default.config.eventserver.mgmt_log_dir=/cm/esvr/log
-whirr.cm.default.config.eventserver.eventserver_index_dir=/cm/esvr/index
-whirr.cm.default.config.navigator.mgmt_log_dir=/cm/nav/log
+whirr.cm.default.config.master.hbase_master_log_dir=/hbase/master/log
+whirr.cm.default.config.hbasethriftserver.hbase_thriftserver_log_dir=/hbase/thrfitserver/log
+whirr.cm.default.config.hbaserestserver.hbase_restserver_log_dir=/hbase/restserver/log
+whirr.cm.default.config.regionserver.hbase_regionserver_log_dir=/hbase/regionserver/log
+
+whirr.cm.default.config.hivemetastore.hive_log_dir=/hive/metastore/log
+whirr.cm.default.config.hiveserver2.hive_log_dir=/hive/server2/log
+
+whirr.cm.default.config.hue_server.hue_server_log_dir=/hue/server/log
+whirr.cm.default.config.beeswax_server.beeswax_log_dir=/hue/beeswax/log
+
+whirr.cm.default.config.impalad.log_dir=/impala/daemon/log
+whirr.cm.default.config.statestore.log_dir=/impala/statestore/log
+
+whirr.cm.default.config.oozie_server.oozie_data_dir=/oozie/data
+whirr.cm.default.config.oozie_server.oozie_log_dir=/oozie/log
+
+whirr.cm.default.config.server.dataDir=/zookeeper/data
+whirr.cm.default.config.server.dataLogDir=/zookeeper/transaction
+whirr.cm.default.config.server.zk_server_log_dir=/zookeeper/log
+
+whirr.cm.default.config.agent.flume_agent_log_dir=/flume/log
+
+whirr.cm.default.config.hostmonitor.mgmt_log_dir=/manager/hostmonitor/log
+whirr.cm.default.config.servicemonitor.mgmt_log_dir=/manager/servicemonitor/log
+whirr.cm.default.config.activitymonitor.mgmt_log_dir=/manager/activitymonitor/log
+whirr.cm.default.config.reportsmanager.mgmt_log_dir=/manager/reportsmanager/log
+whirr.cm.default.config.reportsmanager.headlamp_scratch_dir=/manager/reportsmanager/report
+whirr.cm.default.config.alertpublisher.mgmt_log_dir=/manager/alertpublisher/log
+whirr.cm.default.config.eventserver.mgmt_log_dir=/manager/eventserver/log
+whirr.cm.default.config.eventserver.eventserver_index_dir=/manager/eventserver/index
+whirr.cm.default.config.navigator.mgmt_log_dir=/manager/navigator/log
 
 # CM Settings
 
