Allow list of directories for 'whirr.cm.data.dirs.root'

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -44,7 +44,8 @@ whirr.location-id=us-east-1
 # its initialization and launch, defaults to true
 whirr.cm.auto=true
 
-# Override host storage device mount points with single directory for CM Service directories
+# Override node storage device mount points directory list for CM service directories,
+# ',' separated list
 #whirr.cm.data.dirs.root=/data
 
 # Decide whether to issue cloud security profile and iptables directives to open ports (true)
