--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -23,6 +23,8 @@ whirr.cm.data.dirs.root.default=/data
 whirr.cm.firewall.enable=false
 whirr.cm.db.type=mysql
 
+whirr.cm.agent.log_dir=/cm/agent/log
+
 whirr.cm.default.config.namenode.dfs_name_dir_list=/hdfs/namenode/data
 whirr.cm.default.config.namenode.namenode_log_dir=/hdfs/namenode/log
 whirr.cm.default.config.secondarynamenode.secondarynamenode_log_dir=/hdfs/secondarynamenode/log
