Add jobtracker history dir

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -37,6 +37,7 @@ whirr.cm.default.config.datanode.dfs_data_dir_list=/hdfs/datanode/data
 whirr.cm.default.config.datanode.datanode_log_dir=/hdfs/datanode/log
 
 whirr.cm.default.config.jobtracker.jobtracker_mapred_local_dir_list=/mapreduce/jobtracker/local
+whirr.cm.default.config.jobtracker.hadoop_job_history_dir=/mapreduce/jobtracker/history
 whirr.cm.default.config.jobtracker.jobtracker_log_dir=/mapreduce/jobtracker/log
 whirr.cm.default.config.tasktracker.tasktracker_mapred_local_dir_list=/mapreduce/tasktracker/local
 whirr.cm.default.config.tasktracker.tasktracker_log_dir=/mapreduce/tasktracker/log
@@ -58,7 +59,6 @@ whirr.cm.default.config.statestore.log_dir=/impala/statestore/log
 whirr.cm.default.config.oozie_server.oozie_data_dir=/oozie/data
 whirr.cm.default.config.oozie_server.oozie_log_dir=/oozie/log
 
-#whirr.cm.default.config.server.zookeeper_datadir_autocreate=true
 whirr.cm.default.config.server.dataDir=/zookeeper/data
 whirr.cm.default.config.server.dataLogDir=/zookeeper/transaction
 whirr.cm.default.config.server.zk_server_log_dir=/zookeeper/log
