Increase client port coverage, include HBase, ZK, Datanodes

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -155,15 +155,15 @@ cm-node.ports=
 
 cm-cdh-namenode.client.ports=8020,50070
 cm-cdh-secondarynamenode.client.ports=50090
-cm-cdh-datanode.client.ports=50075
+cm-cdh-datanode.client.ports=50010,50020,50075
 
 cm-cdh-jobtracker.client.ports=8021,50030
 cm-cdh-tasktracker.client.ports=50060
 
-cm-cdh-zookeeper.client.ports=
+cm-cdh-zookeeper.client.ports=2181
 
-cm-cdh-hbase-master.client.ports=60010
-cm-cdh-hbase-regionserver.client.ports=60030
+cm-cdh-hbase-master.client.ports=60000,60010
+cm-cdh-hbase-regionserver.client.ports=60020,60030,8080,9090
 
 cm-cdh-hivemetastore.client.ports=9083
 
