--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -25,6 +25,9 @@ whirr.cluster-user=whirr
 whirr.instance-templates=1 cm-server+cm-agent,1 cm-agent+cm-cdh-namenode+cm-cdh-secondarynamenode+cm-cdh-oozie-server+cm-cdh-hbase-master+cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-impala-statestore+cm-cdh-hue-server+cm-cdh-hue-beeswaxserver,3 cm-agent+cm-cdh-datanode+cm-cdh-tasktracker+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon+cm-cdh-zookeeper
 
 # List of client IP ranges that can access the CM and CDH web console and client servers
+# Note that CM is deployed with the default admin accounts and credentials and CDH is provisioned
+# without strong authentication (kerberos) so this setting should be used with caution, ie
+# the default '0.0.0.0/0' allows any source origin to connect
 whirr.client-cidrs=0.0.0.0/0
 
 # The keys used by the cluster nodes
