Disable external database for Hue until CDH-6928 can be worked around

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -92,12 +92,13 @@ whirr.cm.config.hiveserver2.hive_hs2_config_safety_valve=<property>\n\t<name>hiv
 whirr.cm.config.cm.cm_database_type=
 whirr.cm.config.cm.cm_database_name=cm
 
-whirr.cm.config.hue.database_type=
-whirr.cm.config.hue.database_host=localhost
-whirr.cm.config.hue.database_port=
-whirr.cm.config.hue.database_user=cdh_hue
-whirr.cm.config.hue.database_password=cdh_hue
-whirr.cm.config.hue.database_name=cdh_hue
+# Disable external DB for Hue until workaround CDH-6928
+#whirr.cm.config.hue.database_type=
+#whirr.cm.config.hue.database_host=localhost
+#whirr.cm.config.hue.database_port=
+#whirr.cm.config.hue.database_user=cdh_hue
+#whirr.cm.config.hue.database_password=cdh_hue
+#whirr.cm.config.hue.database_name=cdh_hue
 
 whirr.cm.config.hive.hive_metastore_database_type=
 whirr.cm.config.hive.hive_metastore_database_host=localhost
