Always prepare disks, default to use '/data' overide to get around whirr eroneously detecting multiple volumes on medium instances

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -49,7 +49,7 @@ whirr.cm.auto=true
 
 # Override node storage device mount points directory list for CM service directories,
 # ',' separated list
-#whirr.cm.data.dirs.root=/data
+whirr.cm.data.dirs.root=/data
 
 # Decide whether to issue cloud security profile and iptables directives to open ports (true)
 # or rely on unfettered network access (false), defaults to false
