--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -65,7 +65,7 @@ whirr.cm.db.type=mysql
 whirr.cm.config.cm.cm_database_name=cm
 whirr.cm.config.cm.cm_database_type=mysql
 whirr.cm.config.cm.custom_banner_html=My Cloudera Managed\, Whirr provisioned\, CDH Cluster
-whirr.cm.config.cm.remote_parcel_repo_urls=http://archive.cloudera.com/cdh4/parcels/latest/\\,http://beta.cloudera.com/impala/parcels/latest/
+whirr.cm.config.cm.remote_parcel_repo_urls=http://archive.cloudera.com/cdh4/parcels/latest/\\,http://archive.cloudera.com/impala/parcels/latest/
 
 # Provide CM Services settings with prefix 'whirr.cm.config.' followed by service name
 # (see http://cloudera.github.io/cm_api/apidocs/v3/path__clusters_-clusterName-_services.html)
