If CM license provided, ensure services have correct instrumentation settings applied

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -150,7 +150,7 @@ cm-server.port.web=7180
 cm-server.port.comms=7182
 cm-server.ports=
 
-cm-node.ports=
+cm-node.ports=4867
 
 cm-cdh-namenode.client.ports=8020,50070
 cm-cdh-secondarynamenode.client.ports=50090
