Enable oozie web console, download and add ext-js to lib

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -87,6 +87,8 @@ whirr.cm.config.jobtracker.mapred_job_tracker_handler_count=22
 whirr.cm.config.mapreduce_gateway.mapred_submit_replication=3
 whirr.cm.config.mapreduce_gateway.mapred_reduce_tasks=3
 
+whirr.cm.config.oozie_server.oozie_web_console=true
+
 whirr.cm.config.cm.cm_database_type=
 whirr.cm.config.cm.cm_database_name=cm
 
@@ -107,9 +109,9 @@ whirr.cm.config.hive.hive_metastore_database_name=cdh_hive
 
 whirr.cm.config.oozie_server.oozie_database_type=
 whirr.cm.config.oozie_server.oozie_database_host=localhost
-whirr.cm.config.oozie_server.oozie_database_user=cm_hmon
-whirr.cm.config.oozie_server.oozie_database_password=cm_hmon
-whirr.cm.config.oozie_server.oozie_database_name=cm_hmon
+whirr.cm.config.oozie_server.oozie_database_user=cdh_oozie
+whirr.cm.config.oozie_server.oozie_database_password=cdh_oozie
+whirr.cm.config.oozie_server.oozie_database_name=cdh_oozie
 
 whirr.cm.config.hostmonitor.firehose_database_type=
 whirr.cm.config.hostmonitor.firehose_database_host=localhost
