Make CM license file configurable - use a URI, on classpath:// or whatever.

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -22,6 +22,7 @@ whirr.cm.use.packages=false
 whirr.cm.data.dirs.root.default=/data
 whirr.cm.firewall.enable=false
 whirr.cm.db.type=mysql
+whirr.cm.license.uri=classpath:///cm-license.txt
 
 whirr.cm.agent.log.file=/manager/agent/log/agent.log
 
