--- a/src/test/resources/cm.properties
+++ b/src/test/resources/cm.properties
@@ -17,7 +17,7 @@
 
 whirr.instance-templates=1 cm-server+cm-agent,1 cm-agent+cm-cdh-namenode+cm-cdh-secondarynamenode+cm-cdh-oozie-server+cm-cdh-hbase-master+cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-impala-statestore+cm-cdh-hue-server+cm-cdh-hue-beeswaxserver,3 cm-agent+cm-cdh-datanode+cm-cdh-tasktracker+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon+cm-cdh-zookeeper
 
-whirr.cluster-name=whirr
+whirr.cluster-name=whirrcmtest
 whirr.cluster-user=whirr
 whirr.client-cidrs=0.0.0.0/0
 
