--- a/src/test/resources/cm.properties
+++ b/src/test/resources/cm.properties
@@ -28,7 +28,7 @@ whirr.credential=${sys:whirr.test.credential}
 whirr.identity=${sys:whirr.test.identity}
 
 whirr.provider=aws-ec2
-whirr.hardware-id=m1.medium
+whirr.hardware-id=m1.large
 whirr.image-id=us-east-1/ami-d0f89fb9
 whirr.location-id=us-east-1
 
