Implement sqoop, hcatalog and hiveserver2 services

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -49,6 +49,10 @@ whirr.cm.default.config.regionserver.hbase_regionserver_log_dir=/hbase/regionser
 
 whirr.cm.default.config.hivemetastore.hive_log_dir=/hive/metastore/log
 whirr.cm.default.config.hiveserver2.hive_log_dir=/hive/server2/log
+whirr.cm.default.config.webhcat.hcatalog_log_dir=/hive/hcatalog/log
+
+whirr.cm.default.config.sqoop_server.sqoop_metastore_data_dir=/sqoop/server/data
+whirr.cm.default.config.sqoop_server.sqoop_log_dir=/sqoop/server/log
 
 whirr.cm.default.config.hue_server.hue_server_log_dir=/hue/server/log
 whirr.cm.default.config.beeswax_server.beeswax_log_dir=/hue/beeswax/log
