--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -47,6 +47,9 @@ whirr.cm.default.config.hbasethriftserver.hbase_thriftserver_log_dir=/hbase/thrf
 whirr.cm.default.config.hbaserestserver.hbase_restserver_log_dir=/hbase/restserver/log
 whirr.cm.default.config.regionserver.hbase_regionserver_log_dir=/hbase/regionserver/log
 
+whirr.cm.default.config.solr_server.solr_log_dir=/solr/server/log
+whirr.cm.default.config.solr_server.solr_data_dir=/solr/server/data
+
 whirr.cm.default.config.hivemetastore.hive_log_dir=/hive/metastore/log
 whirr.cm.default.config.hiveserver2.hive_log_dir=/hive/server2/log
 whirr.cm.default.config.webhcat.hcatalog_log_dir=/hive/hcatalog/log
