--- a/src/test/resources/cm.properties
+++ b/src/test/resources/cm.properties
@@ -15,7 +15,7 @@
 # limitations under the License.
 #
 
-whirr.instance-templates=1 cm-server+cm-agent,1 cm-agent+cm-cdh-namenode+cm-cdh-secondarynamenode+cm-cdh-oozie-server+cm-cdh-hbase-master+cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-hiveserver2+cm-cdh-hcatalog+cm-cdh-sqoop-server+cm-cdh-impala-statestore+cm-cdh-hue-server+cm-cdh-hue-beeswaxserver,3 cm-agent+cm-cdh-datanode+cm-cdh-tasktracker+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon+cm-cdh-zookeeper+cm-cdh-sqoop-server
+whirr.instance-templates=1 cm-server+cm-agent,1 cm-agent+cm-cdh-namenode+cm-cdh-zookeeper,1 cm-agent+cm-cdh-secondarynamenode+cm-cdh-oozie-server+cm-cdh-hbase-master+cm-cdh-solr-server+cm-cdh-zookeeper,1 cm-agent+cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-hiveserver2+cm-cdh-hcatalog+cm-cdh-impala-statestore+cm-cdh-hue-server+cm-cdh-hue-beeswaxserver+cm-cdh-sqoop-server+cm-cdh-zookeeper,3 cm-agent+cm-cdh-datanode+cm-cdh-tasktracker+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon+cm-cdh-flume-agent
 
 whirr.cluster-name=whirrcmtest
 whirr.cluster-user=whirr
