Map parcel repos to data mount dirs with suffcient space so as to not trigger warnings in CM

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -25,6 +25,7 @@ whirr.cm.db.type=mysql
 whirr.cm.license.uri=classpath:///cm-license.txt
 
 whirr.cm.agent.log.file=/manager/agent/log/agent.log
+whirr.cm.agent.parcels.dir=/manager/parcels/parcel-runtime
 
 whirr.cm.default.config.namenode.dfs_name_dir_list=/hdfs/namenode/data
 whirr.cm.default.config.namenode.namenode_log_dir=/hdfs/namenode/log
@@ -84,6 +85,7 @@ whirr.cm.default.config.navigator.mgmt_log_dir=/manager/navigator/log
 
 # CM Settings
 
+whirr.cm.config.cm.parcel_repo_path=/data/manager/parcels/parcel-repository
 whirr.cm.config.cm.parcel_distribute_rate_limit_kbs_per_second=100000
 
 whirr.cm.config.hdfs.dfs_block_local_path_access_user=impala
