Update example config, not overriding defaults

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -45,11 +45,11 @@ whirr.location-id=us-east-1
 
 # Switch to enable (true) or disable (false) the automatic setup of a cluster within CM,
 # its initialization and launch, defaults to true
-whirr.cm.auto=true
+#whirr.cm.auto=false
 
 # Override node storage device mount points directory list for CM service directories,
 # ',' separated list
-whirr.cm.data.dirs.root=/data
+#whirr.cm.data.dirs.root=/data
 
 # Decide whether to issue cloud security profile and iptables directives to open ports (true)
 # or rely on unfettered network access (false), defaults to false
@@ -57,7 +57,7 @@ whirr.cm.firewall.enable=true
 
 # Global database type setting for all CM and CDH datastores, overridden on a case by case basis
 # by CM Service settings (see below), defaults to 'mysql'
-whirr.cm.db.type=mysql
+#whirr.cm.db.type=mysql
 
 # Provide CM settings with prefix 'whirr.cm.config.cm.' followed by setting name
 # (see http://cloudera.github.com/cm_api/apidocs/v3/path__cm_config.html)
