--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -39,7 +39,7 @@ whirr.public-key-file=${sys:user.home}/.ssh/whirr.pub
 whirr.provider=aws-ec2
 whirr.identity=${env:WHIRR_CLOUD_PROVIDER_ID}
 whirr.credential=${env:WHIRR_CLOUD_PROVIDER_KEY}
-whirr.hardware-id=m1.medium
+whirr.hardware-id=m1.large
 whirr.image-id=us-east-1/ami-d0f89fb9
 whirr.location-id=us-east-1
 
