[maven-release-plugin] prepare release whirr-cm-1.2

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	<groupId>com.cloudera</groupId>
 	<artifactId>whirr-cm</artifactId>
 	<packaging>jar</packaging>
-	<version>1.2-SNAPSHOT</version>
+	<version>1.2</version>
 	<name>whirr-cm</name>
 	<url>https://github.com/cloudera/whirr-cm</url>
 
