Ensure voumes are formatted and mounted ahead of any service preparation (eg dir creation)

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -22,7 +22,12 @@ whirr.cluster-name=whirr
 whirr.cluster-user=whirr
 
 # The cluster topology, defining 1 CM server node, 3 CDH master nodes and 3 CDH slave nodes
-whirr.instance-templates=1 cm-server+cm-agent,1 cm-agent+cm-cdh-namenode+cm-cdh-zookeeper,1 cm-agent+cm-cdh-secondarynamenode+cm-cdh-oozie-server+cm-cdh-hbase-master+cm-cdh-solr-server+cm-cdh-zookeeper,1 cm-agent+cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-hiveserver2+cm-cdh-hcatalog+cm-cdh-impala-statestore+cm-cdh-hue-server+cm-cdh-hue-beeswaxserver+cm-cdh-sqoop-server+cm-cdh-zookeeper,3 cm-agent+cm-cdh-datanode+cm-cdh-tasktracker+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon+cm-cdh-flume-agent
+whirr.instance-templates=\
+1 cm-server+cm-agent,\
+1 cm-cdh-namenode+cm-cdh-hue-server+cm-cdh-hue-beeswaxserver+cm-cdh-zookeeper+cm-agent,\
+1 cm-cdh-secondarynamenode+cm-cdh-oozie-server+cm-cdh-hbase-master+cm-cdh-sqoop-server+cm-cdh-zookeeper+cm-agent,\
+1 cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-impala-statestore+cm-cdh-hiveserver2+cm-cdh-hcatalog+cm-cdh-zookeeper+cm-agent,\
+3 cm-cdh-datanode+cm-cdh-tasktracker+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon+cm-cdh-solr-server+cm-cdh-flume-agent+cm-agent
 
 # List of client IP ranges that can access the CM and CDH web console and client servers
 # Note that CM is deployed with the default admin accounts and credentials and CDH is provisioned
