--- a/src/test/resources/test-whirrcm.properties
+++ b/src/test/resources/test-whirrcm.properties
@@ -15,7 +15,12 @@
 # limitations under the License.
 #
 
-whirr.provider=aws-ec2
-whirr.hardware-id=m1.large
-whirr.image-id=us-east-1/ami-d0f89fb9
-whirr.location-id=us-east-1
+whirr.cluster-name=whirrcmtest
+
+whirr.private-key-file=./src/test/resources/test-key
+whirr.public-key-file=./src/test/resources/test-key.pub
+
+whirr.credential=${sys:whirr.test.credential}
+whirr.identity=${sys:whirr.test.identity}
+
+whirr.cm.auto=false
