--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 	</distributionManagement>
 
 	<properties>
-		<whirr.version>0.8.2</whirr.version>
+		<whirr.version>0.8.2-cdh4.3.1</whirr.version>
 		<cm.version>4.6.0</cm.version>
 		<log4j.version>1.2.16</log4j.version>
 		<slf4j.version>1.6.4</slf4j.version>
