--- a/src/test/resources/test-whirrcm-ubuntu.properties
+++ b/src/test/resources/test-whirrcm-ubuntu.properties
@@ -17,6 +17,6 @@
 
 whirr.provider=aws-ec2
 whirr.hardware-id=m1.large
-whirr.image-id=us-east-1/ami-d0f89fb9
-whirr.location-id=us-east-1
+whirr.image-id=eu-west-1/ami-89b1a3fd
+whirr.location-id=eu-west-1
 
