--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -54,7 +54,7 @@ whirr.location-id=us-east-1
 
 # Override node storage device mount points directory list for CM service directories,
 # ',' separated list
-#whirr.cm.data.dirs.root=/data
+#whirr.cm.data.dirs.root=/data0
 
 # Decide whether to issue cloud security profile and iptables directives to open ports (true)
 # or rely on unfettered network access (false), defaults to false
@@ -70,7 +70,10 @@ whirr.cm.firewall.enable=true
 whirr.cm.config.cm.cm_database_name=cm
 whirr.cm.config.cm.cm_database_type=mysql
 whirr.cm.config.cm.custom_banner_html=My Cloudera Managed\, Whirr provisioned\, CDH Cluster
-whirr.cm.config.cm.remote_parcel_repo_urls=http://archive.cloudera.com/cdh4/parcels/latest/\\,http://archive.cloudera.com/impala/parcels/latest/\\,http://beta.cloudera.com/search/parcels/latest/
+whirr.cm.config.cm.remote_parcel_repo_urls=\
+http://archive.cloudera.com/cdh4/parcels/latest/\\,\
+http://archive.cloudera.com/impala/parcels/latest/\\,\
+http://beta.cloudera.com/search/parcels/latest/
 
 # Provide CM Services settings with prefix 'whirr.cm.config.' followed by service name
 # (see http://cloudera.github.io/cm_api/apidocs/v3/path__clusters_-clusterName-_services.html)
