Add CM Repo designator example and description

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -90,6 +90,9 @@ whirr.cm.config.hive.hive_metastore_database_user=cdh_hive
 whirr.cm.config.hive.hive_metastore_database_password=cdh_hive
 whirr.cm.config.hive.hive_metastore_database_name=cdh_hive
 
+# Define the CM repository version in 'cm$MAJOR.$MINOR.$INCRAMENTAL' format, defaults to latest available
+#whirr.env.repocm=cm4.6.2
+
 # Increase communication layer default timeouts to allow for long running provisioning tasks
 jclouds.compute.timeout.port-open=1200000
 jclouds.compute.timeout.node-running=3200000
