Implement declarative CM, CM API and CDH versions, refactor integration tests to leverage this

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -53,16 +53,27 @@ whirr.location-id=us-east-1
 #whirr.cm.auto=false
 
 # Override node storage device mount points directory list for CM service directories,
-# ',' separated list
-#whirr.cm.data.dirs.root=/data0
+# ',' separated list (these directories must exist and be correctly mounted)
+#whirr.cm.data.dirs.root=/mnt/data0,/mnt/data1,/mnt/data2,/mnt/data3
 
 # Decide whether to issue cloud security profile and iptables directives to open ports (true)
-# or rely on unfettered network access (false), defaults to false
-whirr.cm.firewall.enable=true
+# or rely on unfettered network access (false), defaults to true
+#whirr.cm.firewall.enable=false
 
 # Global database type setting for all CM and CDH datastores, overridden on a case by case basis
 # by CM Service settings (see below), defaults to 'mysql'
 #whirr.cm.db.type=mysql
+
+# Define the CM repository version in 'cm$MAJOR.$MINOR.$INCREMENTAL' format (major version mandatory,
+# minor and incremental optional), defaults to latest available
+#whirr.env.repocm=cm4
+
+# Define the CM API version in 'v$VERSION' format, defaults to most advanced available from CM version
+#whirr.cm.api=v4
+
+# Define the the CDH major version to install, in 'cdh$VERSION' format. Minor and incremental
+# versions defined by the latest available from the 'whirr.cm.config.cm.remote_parcel_repo_urls' list
+#whirr.cm.cdh=cdh4
 
 # Provide CM settings with prefix 'whirr.cm.config.cm.' followed by setting name
 # (see http://cloudera.github.com/cm_api/apidocs/v3/path__cm_config.html)
@@ -89,9 +100,6 @@ whirr.cm.config.hive.hive_metastore_database_port=3306
 whirr.cm.config.hive.hive_metastore_database_user=cdh_hive
 whirr.cm.config.hive.hive_metastore_database_password=cdh_hive
 whirr.cm.config.hive.hive_metastore_database_name=cdh_hive
-
-# Define the CM repository version in 'cm$MAJOR.$MINOR.$INCRAMENTAL' format, defaults to latest available
-#whirr.env.repocm=cm4.6.2
 
 # Increase communication layer default timeouts to allow for long running provisioning tasks
 jclouds.compute.timeout.port-open=1200000
