--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -20,7 +20,7 @@
 whirr.cm.auto=true
 whirr.cm.use.packages=false
 whirr.cm.data.dirs.root.default=/data0
-whirr.cm.firewall.enable=false
+whirr.cm.firewall.enable=true
 whirr.cm.db.type=mysql
 whirr.cm.license.uri=classpath:///cm-license.txt
 
