--- a/src/test/resources/test-whirrcm-centos.properties
+++ b/src/test/resources/test-whirrcm-centos.properties
@@ -16,7 +16,7 @@
 #
 
 whirr.provider=aws-ec2
-whirr.hardware-id=m1.large
+whirr.hardware-id=m1.medium
 whirr.image-id=eu-west-1/ami-8aa3a8fe
 whirr.location-id=eu-west-1
 whirr.bootstrap-user=ec2-user
