--- a/src/test/resources/test-whirrcm.properties
+++ b/src/test/resources/test-whirrcm.properties
@@ -25,3 +25,6 @@ whirr.identity=${sys:whirr.test.identity}
 
 whirr.cm.auto=false
 
+whirr.env.repocm=${sys:whirr.test.cm.version}
+whirr.cm.api=${sys:whirr.test.cm.api.version}
+whirr.cm.cdh=${sys:whirr.test.cm.cdh.version}
