Refactor to observe skipTests/skipUTs/skipITs/skipASs -D's

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.cloudera</groupId>
 	<artifactId>whirr-cm</artifactId>
@@ -55,6 +56,11 @@
 	</distributionManagement>
 
 	<properties>
+		<skipTests>false</skipTests>
+		<skipUTs>${skipTests}</skipUTs>
+		<skipITs>true</skipITs>
+		<skipASs>true</skipASs>
+
 		<whirr.version>0.8.2-cdh4.3.1</whirr.version>
 		<cm.version>4.6.0</cm.version>
 		<log4j.version>1.2.16</log4j.version>
@@ -62,55 +68,15 @@
 		<hamcrest-all.version>1.1</hamcrest-all.version>
 		<mockito-all.version>1.9.0</mockito-all.version>
 		<junit.version>4.8.1</junit.version>
+
 		<maven-artifact.version>3.0.3</maven-artifact.version>
 		<maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
 		<maven-surefire-plugin.version>2.12</maven-surefire-plugin.version>
 		<maven-failsafe-plugin.version>2.12</maven-failsafe-plugin.version>
+
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<maven.test.skip>false</maven.test.skip>
-		<maven.assembly.skip>true</maven.assembly.skip>
-		<maven.integration-test.skip>false</maven.integration-test.skip>
 	</properties>
-
-	<profiles>
-		<profile>
-			<id>integration</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<version>${maven-failsafe-plugin.version}</version>
-						<configuration>
-							<forkedProcessTimeoutInSeconds>36000</forkedProcessTimeoutInSeconds>
-							<includes>
-								<include>**/integration/*IT.java</include>
-							</includes>
-							<systemPropertyVariables>
-								<log4j.configuration>file:${project.build.testOutputDirectory}/log4j.properties</log4j.configuration>
-							</systemPropertyVariables>
-							<skip>${maven.integration-test.skip}</skip>
-						</configuration>
-						<executions>
-							<execution>
-								<id>integration-test</id>
-								<goals>
-									<goal>integration-test</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>verify</id>
-								<goals>
-									<goal>verify</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 
 	<dependencies>
 		<dependency>
@@ -281,7 +247,7 @@
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
-					<skipAssembly>${maven.assembly.skip}</skipAssembly>
+					<skipAssembly>${skipASs}</skipAssembly>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -295,7 +261,38 @@
 					<systemPropertyVariables>
 						<log4j.configuration>file:${project.build.testOutputDirectory}/log4j.properties</log4j.configuration>
 					</systemPropertyVariables>
+					<skipTests>${skipUTs}</skipTests>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>${maven-failsafe-plugin.version}</version>
+				<configuration>
+					<forkedProcessTimeoutInSeconds>36000</forkedProcessTimeoutInSeconds>
+					<includes>
+						<include>**/integration/*IT.java</include>
+					</includes>
+					<systemPropertyVariables>
+						<log4j.configuration>file:${project.build.testOutputDirectory}/log4j.properties</log4j.configuration>
+					</systemPropertyVariables>
+					<skipTests>${skipTests}</skipTests>
+					<skipITs>${skipITs}</skipITs>
+				</configuration>
+				<executions>
+					<execution>
+						<id>integration-test</id>
+						<goals>
+							<goal>integration-test</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>verify</id>
+						<goals>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
