Switch Availability Zone for sample and integration tests, default integration tests to use sample

--- a/src/test/resources/test-whirrcm-ubuntu.properties
+++ b/src/test/resources/test-whirrcm-ubuntu.properties
@@ -17,6 +17,6 @@
 
 whirr.provider=aws-ec2
 whirr.hardware-id=m1.medium
-whirr.image-id=eu-west-1/ami-89b1a3fd
-whirr.location-id=eu-west-1
+whirr.image-id=us-west-2/ami-fb68f8cb
+whirr.location-id=us-west-2
 
