--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -45,8 +45,8 @@ whirr.provider=aws-ec2
 whirr.identity=${env:WHIRR_CLOUD_PROVIDER_ID}
 whirr.credential=${env:WHIRR_CLOUD_PROVIDER_KEY}
 whirr.hardware-id=m1.large
-whirr.image-id=us-east-1/ami-d0f89fb9
-whirr.location-id=us-east-1
+whirr.image-id=us-west-2/ami-fb68f8cb
+whirr.location-id=us-west-2
 
 # Switch to enable (true) or disable (false) the automatic setup of a cluster within CM,
 # its initialization and launch, defaults to true
