--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -44,7 +44,7 @@ whirr.public-key-file=${sys:user.home}/.ssh/whirr.pub
 whirr.provider=aws-ec2
 whirr.identity=${env:WHIRR_CLOUD_PROVIDER_ID}
 whirr.credential=${env:WHIRR_CLOUD_PROVIDER_KEY}
-whirr.hardware-id=m1.medium
+whirr.hardware-id=m1.large
 whirr.image-id=us-west-2/ami-fb68f8cb
 whirr.location-id=us-west-2
 
