Update readme and example config given new integration test harness

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -64,14 +64,14 @@ whirr.location-id=us-west-2
 # by CM Service settings (see below), defaults to 'mysql'
 #whirr.cm.db.type=mysql
 
-# Define the CM repository version in 'cm$MAJOR.$MINOR.$INCREMENTAL' format (major version mandatory,
-# minor and incremental optional), defaults to latest available
+# Define the CM repository version in 'cm$MAJOR_VERSION.$MINOR_VERSION.$INCREMENTAL_VERSION'
+# format (major version mandatory, minor and incremental optional), defaults to latest available
 #whirr.env.repocm=cm4
 
-# Define the CM API version in 'v$VERSION' format, defaults to most advanced available from CM version
+# Define the CM API version in 'v$MAJOR_VERSION' format, defaults to most advanced available from CM version
 #whirr.cm.api=v4
 
-# Define the the CDH major version to install, in 'cdh$VERSION' format. Minor and incremental
+# Define the the CDH major version to install, in 'cdh$MAJOR_VERSION' format. Minor and incremental
 # versions defined by the latest available from the 'whirr.cm.config.cm.remote_parcel_repo_urls' list
 #whirr.cm.cdh=cdh4
 
