--- a/src/test/resources/test-whirrcm.properties
+++ b/src/test/resources/test-whirrcm.properties
@@ -23,7 +23,7 @@ whirr.public-key-file=./src/test/resources/test-key.pub
 whirr.credential=${sys:whirr.test.credential}
 whirr.identity=${sys:whirr.test.identity}
 
-whirr.cm.auto=false
+whirr.cm.auto=true
 
 whirr.env.repocm=${sys:whirr.test.cm.version}
 whirr.cm.api=${sys:whirr.test.cm.api.version}
