--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -15,9 +15,16 @@
 # limitations under the License.
 #
 
+log4j.rootLogger=TRACE, file, stdout
+ 
+log4j.appender.file.threshold=INFO
+log4j.appender.file=org.apache.log4j.FileAppender
+log4j.appender.file.file=./target/whirr.log
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d %p [%t] %c %l %m%n
+ 
+log4j.appender.stdout.threshold=FATAL
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.conversionPattern=%d %-5p %m%n
-#log4j.appender.stdout.layout.conversionPattern=%d %p [%t] %c %l %m%n
-
-log4j.rootLogger=FATAL,stdout
