--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -19,7 +19,7 @@ log4j.rootLogger=TRACE, file, stdout
  
 log4j.appender.file.threshold=INFO
 log4j.appender.file=org.apache.log4j.FileAppender
-log4j.appender.file.file=./target/whirr.log
+log4j.appender.file.file=./target/test-log/test.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d %p [%t] %c %l %m%n
  
