Implement HttpFS role

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -170,6 +170,7 @@ cm-node.ports=4867
 
 cm-cdh-namenode.client.ports=8020,50070
 cm-cdh-secondarynamenode.client.ports=50090
+cm-cdh-httpfs.client.ports=14000
 cm-cdh-datanode.client.ports=50010,50020,50075
 
 cm-cdh-jobtracker.client.ports=8021,50030
