--- a/src/test/resources/test-whirrcm-centos.properties
+++ b/src/test/resources/test-whirrcm-centos.properties
@@ -16,7 +16,7 @@
 #
 
 whirr.provider=aws-ec2
-whirr.hardware-id=m1.medium
+whirr.hardware-id=m1.large
 whirr.image-id=us-west-2/ami-e030a5d0
 whirr.location-id=us-west-2
 #whirr.image-id=eu-west-1/ami-8aa3a8fe
