--- a/src/test/resources/test-whirrcm-ubuntu.properties
+++ b/src/test/resources/test-whirrcm-ubuntu.properties
@@ -16,7 +16,7 @@
 #
 
 whirr.provider=aws-ec2
-whirr.hardware-id=m1.medium
+whirr.hardware-id=m1.large
 whirr.image-id=us-west-2/ami-fb68f8cb
 whirr.location-id=us-west-2
 #whirr.image-id=eu-west-1/ami-89b1a3fd
