Update example config for Search GA and pin CM version

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -66,7 +66,7 @@ whirr.location-id=us-west-2
 
 # Define the CM repository version in 'cm$MAJOR_VERSION.$MINOR_VERSION.$INCREMENTAL_VERSION'
 # format (major version mandatory, minor and incremental optional), defaults to latest available
-#whirr.env.repocm=cm4
+whirr.env.repocm=cm4.6.3
 
 # Define the CM API version in 'v$MAJOR_VERSION' format, defaults to most advanced available from CM version
 #whirr.cm.api=v4
@@ -84,7 +84,7 @@ whirr.cm.config.cm.custom_banner_html=My Cloudera Managed\, Whirr provisioned\, 
 whirr.cm.config.cm.remote_parcel_repo_urls=\
 http://archive.cloudera.com/cdh4/parcels/latest/\\,\
 http://archive.cloudera.com/impala/parcels/latest/\\,\
-http://beta.cloudera.com/search/parcels/latest/
+http://archive.cloudera.com/search/parcels/latest/
 
 # Provide CM Services settings with prefix 'whirr.cm.config.' followed by service name
 # (see http://cloudera.github.io/cm_api/apidocs/v3/path__clusters_-clusterName-_services.html)
