Update example and integration test configs to explicitly set EC2 region

--- a/src/test/resources/test-whirrcm-centos.properties
+++ b/src/test/resources/test-whirrcm-centos.properties
@@ -18,8 +18,5 @@
 whirr.provider=aws-ec2
 whirr.hardware-id=m1.medium
 whirr.image-id=us-west-2/ami-e030a5d0
-whirr.location-id=us-west-2
-#whirr.image-id=eu-west-1/ami-8aa3a8fe
-#whirr.location-id=eu-west-1
+whirr.location-id=us-west-2c
 whirr.bootstrap-user=ec2-user
-
