--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -46,7 +46,7 @@ whirr.identity=${env:WHIRR_CLOUD_PROVIDER_ID}
 whirr.credential=${env:WHIRR_CLOUD_PROVIDER_KEY}
 whirr.hardware-id=m1.large
 whirr.image-id=us-west-2/ami-fb68f8cb
-whirr.location-id=us-west-2
+whirr.location-id=us-west-2c
 
 # Switch to enable (true) or disable (false) the automatic setup of a cluster within CM,
 # its initialization and launch, defaults to true
