Implement CM API Version aware config, add new V5 Impala paramaters

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -62,6 +62,7 @@ whirr.cm.default.config.hue_server.hue_server_log_dir=/hue/server/log
 whirr.cm.default.config.beeswax_server.beeswax_log_dir=/hue/beeswax/log
 
 whirr.cm.default.config.impalad.log_dir=/impala/daemon/log
+whirr.cm.default.config.5.impalad.audit_event_log_dir=/impala/daemon/audit
 whirr.cm.default.config.statestore.log_dir=/impala/statestore/log
 
 whirr.cm.default.config.oozie_server.oozie_data_dir=/oozie/data0
