--- a/src/test/resources/test-whirrcm-ubuntu.properties
+++ b/src/test/resources/test-whirrcm-ubuntu.properties
@@ -16,6 +16,6 @@
 #
 
 whirr.provider=aws-ec2
-whirr.hardware-id=m1.medium
+whirr.hardware-id=m1.large
 whirr.image-id=us-west-2/ami-fb68f8cb
 whirr.location-id=us-west-2c
