--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -101,7 +101,7 @@ whirr.cm.config.mapreduce_gateway.mapred_submit_replication=3
 whirr.cm.config.mapreduce_gateway.mapred_reduce_tasks=3
 whirr.cm.config.jobtracker.job_tracker_bind_wildcard=true
 
-whirr.cm.config.hbase.hbase_enable_replication=true
+whirr.cm.config.5.hbase.hbase_enable_replication=true
 whirr.cm.config.5.hbase.hbase_enable_indexing=true
 
 whirr.cm.config.oozie_server.oozie_web_console=true
