Implement JDK install role, paramaterise with optional JDK install URL

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -75,6 +75,11 @@ whirr.env.repocm=cm4.7.2
 # versions defined by the latest available from the 'whirr.cm.config.cm.remote_parcel_repo_urls' list
 #whirr.cm.cdh=cdh4
 
+# Provide an optional JDK install URL, supporting JDK 1.6 and 1.7 '.bin', '.tar' and '.tar.gz' installs
+# as downloaded from Oracle and hosted on a web server. If not set, the JDK will default to that
+# distributed in the Cloudera RPM/.deb repositories
+#whirr.jdk-install-url=http://www.reucon.com/cdn/java/jdk-7u40-linux-x64.tar.gz
+
 # Provide CM settings with prefix 'whirr.cm.config.cm.' followed by setting name
 # (see http://cloudera.github.com/cm_api/apidocs/v3/path__cm_config.html)
 # All settings are defaulted to reasonable values, but some overriding examples are show below:
