Add JDK installed config paramater, ensure working dir is returned to after JDK installed

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -80,6 +80,9 @@ whirr.env.repocm=cm4.7.2
 # distributed in the Cloudera RPM/.deb repositories
 #whirr.jdk-install-url=http://www.reucon.com/cdn/java/jdk-7u40-linux-x64.tar.gz
 
+# Indidcate JDK is installed by whirr-cm (as above) and other whirr components should not attempt an install 
+whirr.env.jdk_installed=true
+
 # Provide CM settings with prefix 'whirr.cm.config.cm.' followed by setting name
 # (see http://cloudera.github.com/cm_api/apidocs/v3/path__cm_config.html)
 # All settings are defaulted to reasonable values, but some overriding examples are show below:
