Implement CM5 and CDH5 support

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -24,9 +24,9 @@ whirr.cluster-user=whirr
 # The cluster topology, defining 1 CM server node, 3 CDH master nodes and 3 CDH slave nodes
 whirr.instance-templates=\
 1 cm-server+cm-agent,\
-1 cm-cdh-namenode+cm-cdh-hue-server+cm-cdh-hue-beeswaxserver+cm-cdh-httpfs+cm-cdh-zookeeper+cm-agent,\
+1 cm-cdh-namenode+cm-cdh-hue-server+cm-cdh-httpfs+cm-cdh-zookeeper+cm-agent,\
 1 cm-cdh-secondarynamenode+cm-cdh-oozie-server+cm-cdh-hbase-master+cm-cdh-sqoop-server+cm-cdh-zookeeper+cm-cdh-httpfs+cm-agent,\
-1 cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-impala-statestore+cm-cdh-hiveserver2+cm-cdh-hcatalog+cm-cdh-zookeeper+cm-cdh-httpfs+cm-agent,\
+1 cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-impala-statestore+cm-cdh-impala-catalog-server+cm-cdh-hiveserver2+cm-cdh-hcatalog+cm-cdh-zookeeper+cm-cdh-httpfs+cm-agent,\
 3 cm-cdh-datanode+cm-cdh-tasktracker+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon+cm-cdh-solr-server+cm-cdh-solr-hbase-indexer+cm-cdh-flume-agent+cm-cdh-httpfs+cm-agent
 
 # List of client IP ranges that can access the CM and CDH web console and client servers
@@ -66,17 +66,17 @@ whirr.location-id=us-west-2c
 
 # Define the CM repository version in 'cm$MAJOR_VERSION.$MINOR_VERSION.$INCREMENTAL_VERSION'
 # format (major version mandatory, minor and incremental optional), defaults to latest available
-whirr.env.repocm=cm4.7.2
+#whirr.env.repocm=cm5.0.0
 
 # Define the CM API version in 'v$MAJOR_VERSION' format, defaults to most advanced available from CM version
-#whirr.cm.api=v4
+#whirr.cm.api=v6
 
 # Define the the CDH major version to install, in 'cdh$MAJOR_VERSION' format. Minor and incremental
 # versions defined by the latest available from the 'whirr.cm.config.cm.remote_parcel_repo_urls' list
-#whirr.cm.cdh=cdh4
+#whirr.cm.cdh=cdh5
 
 # Provide an optional JDK install URL, supporting JDK 1.6 and 1.7 '.bin', '.tar' and '.tar.gz' installs
-# as downloaded from Oracle and hosted on a web server. If not set, the JDK will default to that
+# as downloaded from Oracle and hosted on a web server. If not set, the JDK will default to the latest
 # distributed in the Cloudera RPM/.deb repositories
 #whirr.jdk-install-url=http://www.reucon.com/cdn/java/jdk-7u40-linux-x64.tar.gz
 
@@ -89,10 +89,7 @@ whirr.env.jdk_installed=true
 whirr.cm.config.cm.cm_database_name=cm
 whirr.cm.config.cm.cm_database_type=mysql
 whirr.cm.config.cm.custom_banner_html=My Cloudera Managed\, Whirr provisioned\, CDH Cluster
-whirr.cm.config.cm.remote_parcel_repo_urls=\
-http://archive.cloudera.com/cdh4/parcels/latest/\\,\
-http://archive.cloudera.com/impala/parcels/latest/\\,\
-http://archive.cloudera.com/search/parcels/latest/
+whirr.cm.config.cm.remote_parcel_repo_urls=http://archive.cloudera.com/cdh5/parcels/latest/
 
 # Provide CM Services settings with prefix 'whirr.cm.config.' followed by service name
 # (see http://cloudera.github.io/cm_api/apidocs/v3/path__clusters_-clusterName-_services.html)
