--- a/src/test/resources/test-whirrcm-centos.properties
+++ b/src/test/resources/test-whirrcm-centos.properties
@@ -19,4 +19,6 @@ whirr.provider=aws-ec2
 whirr.hardware-id=m1.large
 whirr.image-id=us-west-2/ami-e030a5d0
 whirr.location-id=us-west-2c
+#whirr.image-id=eu-west-1/ami-9fa2b5eb
+#whirr.location-id=eu-west-1c
 whirr.bootstrap-user=ec2-user
