--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,8 @@
 		<skipITs>true</skipITs>
 		<skipASs>true</skipASs>
 
-		<whirr.version>0.8.2-cdh4.3.1</whirr.version>
-		<cm.version>4.7.0</cm.version>
+		<whirr.version>0.9.0-SNAPSHOT</whirr.version>
+		<cm.version>5.0.0-beta-1</cm.version>
 		<log4j.version>1.2.16</log4j.version>
 		<slf4j.version>1.6.4</slf4j.version>
 		<hamcrest-all.version>1.1</hamcrest-all.version>
